--- a/package.json
+++ b/package.json
@@ -9,18 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tensorflow/tfjs": "^4.22.0",
+    "date-fns": "^4.1.0",
+    "lodash": "^4.17.21",
+    "next": "14.2.25",
+    "papaparse": "^5.5.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.25"
+    "recharts": "^2.15.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/recharts": "^1.8.29",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.25",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.25"
+    "typescript": "^5"
   }
 }
