--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tensorflow/tfjs": "^4.22.0",
     "date-fns": "^4.1.0",
+    "jstat": "^1.9.6",
     "lodash": "^4.17.21",
     "next": "14.2.25",
     "papaparse": "^5.5.2",
